# blackjack-dealer-rs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-bake.hcl  k6benchmark.js
.github/workflows/: docker.yml  test.yml
benches/: card_benches.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs
k8s/: deployment.yaml  ingressroute.yaml  service.yaml
logic/: Cargo.toml
logic/benches/: card_benches.rs
logic/src/: card.rs  deck_generator.rs  error.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs  metrics.rs
src/: deck_generator.rs  main.rs
