[package]
name = "blackjack-dealer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures-util = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strum = "0.24.0"
strum_macros = "0.24.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
