[package]
name = "client"
version = "0.1.0"
edition = "2018"

[lib]
name = "client"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strum = "0.24.0"
strum_macros = "0.24.0"
reqwest = { version = "0.11.10", features = ["json"] }
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dependencies.logic]
path = "../logic"
