[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"

[dependencies]
lazy_static = "1.5.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = "0.26.3"
strum_macros = "0.26.4"
reqwest = { version = "0.12.12", features = ["json"] }
clap = { version = "4.5.28", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dependencies.logic]
path = "../logic"
