[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"

[dependencies]
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"
reqwest = { version = "0.12.23", features = ["json"] }
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dependencies.logic]
path = "../logic"
