[package]
name = "logic"
version = "0.1.0"
edition = "2018"

[lib]
name = "logic"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strum = "0.24.0"
strum_macros = "0.24.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "card_benches"
harness = false
