[package]
name = "logic"
version = "0.1.0"
edition = "2021"

[lib]
name = "logic"

[dependencies]
lazy_static = "1.5.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "card_benches"
harness = false
