[package]
name = "logic"
version = "0.1.0"
edition = "2024"

[lib]
name = "logic"

[dependencies]
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "card_benches"
harness = false
