[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures-util = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.14"
prometheus = { version = "0.13.0", features = ["process"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
warp-prometheus = "0.5.0"

[dependencies.logic]
path = "../logic"