[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
futures-util = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.28"
prometheus = { version = "0.14.0", features = ["process"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }

[dependencies.logic]
path = "../logic"
